fix dark mode to add black background in body

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,14 +10,25 @@
   text-align: center;
 }
 
-.nes-container,.nes-container.is-dark {
+.nes-container,
+.nes-container.is-dark {
   margin: 10px;
   padding-left: 15px;
   padding-right: 15px;
+
+  &.is-rounded {
+    padding: 1rem 1.5rem;
+    margin: 4px;
+    border-image-outset: 2;
+  }
   
   &.with-input {
     padding: 5px 8px;
   }
+}
+
+.is-dark .nes-btn {
+  border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(255,255,255)" /></svg>');
 }
 
 .dark-mode,
